--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/public/bundles/
+/var/
 /vendor/
+###< symfony/framework-bundle ###
+
 /.idea/
+/symfony.lock
 /composer.lock
+/bin/
